fix:dark mode in header A1

--- a/src/assets/style/_ui.scss
+++ b/src/assets/style/_ui.scss
@@ -12,7 +12,10 @@
     max-width: 720px;
     padding: 72px 0 72px 0;
   }
-  h1, h2, h3, h4 {
+  h1,
+  h2,
+  h3,
+  h4 {
     margin-bottom: 16px;
   }
 
@@ -26,10 +29,10 @@
   position: relative;
   width: 100%;
   height: 100%;
-  transition: .333s ease-in-out;
-  &:hover {
-    transform: rotate(20deg);
-  }
+  transition: 0.333s ease-in-out;
+  // &:hover {
+  //   transform: rotate(20deg);
+  // }
   a {
     position: relative;
     display: block;
